Добавлено описание ползункам фильтр цены в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -109,8 +109,8 @@
                   <div class="range__scale">
                     <div class="range__selected"></div>
                   </div>
-                  <div class="range__toggle range__toggle--min" tabindex="0"></div>
-                  <div class="range__toggle range__toggle--max" tabindex="0"></div>
+                  <div class="range__toggle range__toggle--min" tabindex="0" aria-label="Указатель минимальной цены"></div>
+                  <div class="range__toggle range__toggle--max" tabindex="0" aria-label="Указатель максимальной цены"></div>
                 </div>
                 <div class="price-selection__fields">
                   <label class="price-selection__label">
